<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Content-->
    <ScrollView
        android:layout_above="@id/btnTransport"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--Content-->
            <LinearLayout
                android:background="@color/bg"
                android:padding="@dimen/margin"
                android:layout_margin="@dimen/margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--company Name-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--icon-->
                    <ImageView
                        android:src="@drawable/ic_action_company"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <!--textField-->
                    <EditText
                        android:id="@+id/edtCompanyName"
                        android:textSize="@dimen/h2"
                        android:textColorHint="@color/colorPrimaryLight"
                        android:inputType="text"
                        android:hint="@string/company_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <!--Address-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--icon-->
                    <ImageView
                        android:src="@drawable/ic_action_address"
                        android:layout_gravity="start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <!--textField-->
                    <EditText
                        android:id="@+id/edtAddress"
                        android:textColorHint="@color/colorPrimaryLight"
                        android:textSize="@dimen/h2"
                        android:lines="3"
                        android:gravity="start"
                        android:inputType="textMultiLine"
                        android:hint="@string/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <!--Fax-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--icon-->
                    <ImageView
                        android:src="@drawable/ic_action_fax"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <!--textField-->
                    <EditText
                        android:id="@+id/edtFax"
                        android:textColorHint="@color/colorPrimaryLight"
                        android:textSize="@dimen/h2"
                        android:inputType="phone"
                        android:hint="@string/fax_6612345678"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <!--Telephone-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--icon-->
                    <ImageView
                        android:src="@drawable/ic_action_telephone"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <!--textField-->
                    <EditText
                        android:id="@+id/edtTelephone"
                        android:textColorHint="@color/colorPrimaryLight"
                        android:textSize="@dimen/h2"
                        android:inputType="phone"
                        android:hint="@string/telephone_021234567"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <!--Branch-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--icon-->
                    <ImageView
                        android:src="@drawable/ic_action_name"
                        android:layout_gravity="start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <!--textField-->
                    <EditText
                        android:id="@+id/edtBranch"
                        android:textColorHint="@color/colorPrimaryLight"
                        android:textSize="@dimen/h2"
                        android:lines="3"
                        android:inputType="textMultiLine"
                        android:gravity="start"
                        android:hint="@string/branch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <!--Email-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--icon-->
                    <ImageView
                        android:src="@drawable/ic_action_email"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <!--textField-->
                    <EditText
                        android:id="@+id/edtEmail"
                        android:textColorHint="@color/colorPrimaryLight"
                        android:textSize="@dimen/h2"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <!--Password-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--icon-->
                    <ImageView
                        android:src="@drawable/ic_action_password"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <!--textField-->
                    <EditText
                        android:id="@+id/edtPassword"
                        android:textColorHint="@color/colorPrimaryLight"
                        android:textSize="@dimen/h2"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <!--head Quarters-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--icon-->
                    <ImageView
                        android:src="@drawable/ic_action_company"
                        android:layout_gravity="start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <!--textField-->
                    <EditText
                        android:id="@+id/edtHead"
                        android:textColorHint="@color/colorPrimaryLight"
                        android:textSize="@dimen/h2"
                        android:lines="3"
                        android:gravity="start"
                        android:inputType="textMultiLine"
                        android:hint="@string/head_quarter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <!--Button Save-->
    <Button
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/h1"
        android:background="@color/bg"
        android:layout_margin="@dimen/margin"
        android:layout_alignParentBottom="true"
        android:id="@+id/btnTransport"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>