<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Content-->
    <ScrollView
        android:layout_above="@id/btnSaveCustomer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:background="@color/bg"
                android:orientation="vertical"
                android:padding="@dimen/margin"
                android:layout_margin="@dimen/margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Name-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--icon-->
                    <ImageView
                        android:src="@drawable/ic_action_name"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <!--textField-->
                    <EditText
                        android:textColorHint="@color/colorPrimaryLight"
                        android:textSize="@dimen/h2"
                        android:id="@+id/edtName"
                        android:inputType="text"
                        android:hint="@string/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <!--Surname-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--icon-->
                    <ImageView
                        android:src="@drawable/ic_action_lastname"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <!--textField-->
                    <EditText
                        android:textColorHint="@color/colorPrimaryLight"
                        android:textSize="@dimen/h2"
                        android:id="@+id/edtSurname"
                        android:inputType="text"
                        android:hint="@string/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <!--Email-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--icon-->
                    <ImageView
                        android:src="@drawable/ic_action_email"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <!--textField-->
                    <EditText
                        android:textColorHint="@color/colorPrimaryLight"
                        android:textSize="@dimen/h2"
                        android:id="@+id/edtEmail"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <!--PassWord-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--icon-->
                    <ImageView
                        android:src="@drawable/ic_action_password"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <!--textField-->
                    <EditText
                        android:textSize="@dimen/h2"
                        android:textColorHint="@color/colorPrimaryLight"
                        android:id="@+id/edtPassword"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <!--Phone-->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--icon-->
                    <ImageView
                        android:src="@drawable/ic_action_phone"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <!--textField-->
                    <EditText
                        android:textSize="@dimen/h2"
                        android:textColorHint="@color/colorPrimaryLight"
                        android:id="@+id/edtPhone"
                        android:inputType="phone"
                        android:hint="@string/phone_66812345678"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <TextView
                    android:layout_margin="@dimen/margin"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/h1"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <!--Icon social-->
                <LinearLayout
                    android:padding="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--FaceBook-->
                    <ImageView
                        android:src="@drawable/ic_facebook"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <!--Google-->
                    <ImageView
                        android:src="@drawable/ic_google_plus"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <!--twitter-->
                    <ImageView
                        android:src="@drawable/ic_twitter"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <!--Button Save-->
    <Button
        android:layout_margin="@dimen/margin"
        android:id="@+id/btnSaveCustomer"
        android:text="@string/save"
        android:background="@color/bg"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/h1"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>